# HW03Part07

./: .gitignore  README.md  malwaredatadownload.sh  multiclass_impl.sh  pyproject.toml  setup.cfg
scripts/: binaryclassification_impl.py  imagenet_impl.py  imagenet_impl.sh  imagenet_inference.py  multiclass_eval.py  multiclass_impl.py
src/mchnpkg/: __init__.py
src/mchnpkg/deepl/: __init__.py  multiclass.py  two_layer_binary_classification.py
src/mchnpkg/model/: __init__.py  cauchy_statsmodels.py  logit.py  neuralnet.py  regression.py
