[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mchnpkg"
version = "0.1.0"
description = "Course utilities and homework solutions"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "numpy",
  "matplotlib",
  "scikit-learn",
  "torch",
]

[project.optional-dependencies]
dev = [
  "jupyter",
  "ipykernel",
]

[dependency-groups]
dev = [
    "ipykernel>=7.1.0",
    "jupyter>=1.1.1",
]
